<resources>
    <string name="app_name">IntelliShop</string>
    <string name="login_title">IntelliShop</string>

    <string name="tab_home">Home</string>
    <string name="tab_coupons">Favorites</string>
    <string name="tab_profile">Profile</string>
    <string name="menu_open">Menu</string>
    <string name="menu_sign_in">Sign in</string>

    <string name="search_hint">Search IntelliShop</string>
    <string name="search_go">Search</string>
...
    <string name="detail_code_copied">Coupon code copied</string>

    <string name="favorites_header">My Coupons</string>
    <string name="favorites_empty">Like a coupon to save it here</string>

    <string name="profile_my_coupons">My Coupons</string>
    <string name="profile_coupon_history">Redeemed Offers</string>
    <string name="history_empty">No coupon activity yet</string>
    <string name="profile_my_preferences">My Preferences</string>
    <string name="profile_my_categories">My Categories</string>
    <string name="profile_my_memberships">My Memberships</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_sign_out">Sign Out</string>
...
    <string name="profile_settings">Settings</string>
    <string name="profile_night_mode">Night Mode</string>
    <string name="profile_notifications">Notifications</string>
    <string name="pw_current">Current password</string>
    <string name="pw_new">New password</string>
    <string name="pw_confirm">Confirm new password</string>
    <string name="pw_change">Change</string>
    <string name="pw_cancel">Cancel</string>
    <string name="pw_fill_all">Fill in all password fields</string>
    <string name="pw_mismatch">New passwords do not match</string>
    <string name="pw_changed">Password updated</string>
    <string name="gate_save">Sign-Up to save coupons</string>
    <string name="gate_copy">Sign-Up to copy the coupon code</string>
    <string name="gate_site">Sign-Up to go to the site</string>
...
    <string name="share_hint">Friend\'s username</string>
    <string name="share_send">Send</string>
    <string name="share_sent">Sent to %s</string>
    <string name="share_unknown_user">No user with that username</string>
    <string name="share_self">You can\'t share with yourself</string>
    <string name="share_failed">Could not share, try again</string>
    <string name="profile_sent_offers">Sent Offers by friends</string>
    <string name="sent_offers_title">Sent Offers by friends</string>
    <string name="sent_offers_empty">No offers from friends yet</string>
    <string name="sent_remove_title">Remove offer</string>
    <string name="sent_remove_message">Remove this offer from %s?</string>
    <string name="sent_remove_confirm">Remove</string>
    <string name="sent_removed">Offer removed</string>
...
    <string name="error_register_failed">Registration failed</string>
    <string name="error_username_required">Enter a username</string>
    <string name="error_username_taken">Username already taken</string>
    <string name="error_email_required">Enter an email</string>
    <string name="error_email_invalid">Enter a valid email address</string>
    <string name="error_password_required">Enter a password</string>
    <string name="error_password_short">Password must be at least 6 characters</string>
    <string name="register_fix_fields">Please fix: %s</string>
    <string name="field_username">Username</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>

    <string name="login_submit">Log in</string>
...
